apps/paperless/paperless-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/part-of: day2-services
  annotations:
    argocd.argoproj.io/sync-wave: "0"
