apps/paperless/paperless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
    app.kubernetes.io/name: paperless
    argocd.argoproj.io/managed-by: argocd
spec:
  selector:
    app: paperless
  ports:
  - name: http
    port: 8000
    targetPort: http
